[package]
name = "immutable-ledger"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = "2.1.1"
anyhow = "1.0.86"
minicbor = { version = "0.24", features = ["std"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
hex = "0.4.3"
blake2b_simd = "1.0.2"
blake3 = "=0.1.3"
proptest = { version = "1.5.0" }

[package.metadata.cargo-machete]
ignored = ["proptest"]



[lints]
workspace = true


[dev-dependencies]
test-strategy = "0.4.0"


