[package]
name = "jormungandr-vote-tx"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalyst-voting = { path = "../catalyst-voting" }
anyhow = "1.0.89"

[dev-dependencies]
catalyst-voting = { path = "../catalyst-voting", features = ["proptest-arbitrary"] }

proptest = { version = "1.5.0" }
# Potentially it could be replaced with using `proptest::property_test` attribute macro,
# after this PR will be merged https://github.com/proptest-rs/proptest/pull/523
test-strategy = "0.4.0"

[features]
# Feature which makes publicly available
# `proptest::prelude::Arbitrary` trait implementation for some types
proptest-arbitrary = ["catalyst-voting/proptest-arbitrary"]
