[package]
name = "ledger"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = "2.1.1"
anyhow = "1.0.86"
minicbor = { version = "0.24", features = ["std"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
ulid = { version = "1.1.3", features = ["serde", "uuid"] }
cddl = "0.9.4"
hex = "0.4.3"

[lints]
workspace = true
