[package]
name = "rbac-registration"
description = "Role Based Access Control Registration"
keywords = ["cardano", "catalyst", "rbac registration"]
version = "0.0.4"
authors = [
    "Arissara Chotivichit <arissara.chotivichit@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
hex = "0.4.3"
anyhow = "1.0.89"
strum_macros = "0.26.4"
minicbor = { version = "0.25.1", features = ["alloc", "derive", "half"] }
brotli = "7.0.0"
zstd = "0.13.2"
x509-cert = "0.2.5"
der-parser = "9.0.0"
tracing = "0.1.40"
ed25519-dalek = "2.1.1"
uuid = "1.11.0"
oid-registry = "0.7.1"
thiserror = "2.0.11"

c509-certificate = { version = "0.0.3", path = "../c509-certificate" }
pallas = { version = "0.33.0" }
cbork-utils = { version = "0.0.1", path = "../cbork-utils" }
cardano-blockchain-types = { version = "0.0.3", path = "../cardano-blockchain-types" }
catalyst-types = { version = "0.0.3", path = "../catalyst-types" }
