[package]
name = "rbac-registration"
description = "Role Based Access Control Registration"
keywords = ["cardano", "catalyst", "rbac registration"]
version = "0.0.6"
authors = [
    "Arissara Chotivichit <arissara.chotivichit@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
hex = "0.4.3"
anyhow = "1.0.89"
strum_macros = "0.26.4"
minicbor = { version = "0.25.1", features = ["alloc", "derive", "half"] }
# brotli = "7.0.0"
# zstd = { version ="0.13.3",  default-features = false }
x509-cert = "0.2.5"
der-parser = "9.0.0"
tracing = "0.1.40"
ed25519-dalek = "2.1.1"
uuid = "1.11.0"
oid-registry = "0.7.1"
thiserror = "2.0.11"

c509-certificate = { path = "../c509-certificate" }
cbork-utils = { path = "../cbork-utils" }
cardano-blockchain-types = { path = "../cardano-blockchain-types" }
catalyst-types = { path = "../catalyst-types"}

pallas-crypto = { git = "https://github.com/input-output-hk/catalyst-pallas", branch = "feat/pallas-network-types" }
pallas-addresses = { git = "https://github.com/input-output-hk/catalyst-pallas", branch = "feat/pallas-network-types" }
pallas-primitives = { git = "https://github.com/input-output-hk/catalyst-pallas", branch = "feat/pallas-network-types" }
pallas-traverse = { git = "https://github.com/input-output-hk/catalyst-pallas", branch = "feat/pallas-network-types" }
pallas-codec = { git = "https://github.com/input-output-hk/catalyst-pallas", branch = "feat/pallas-network-types" }
