[package]
name = "catalyst-signed-doc"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalyst-types = { version = "0.0.3", path = "../catalyst-types" }

anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
coset = "0.3.8"
minicbor = { version = "0.25.1", features = ["half"] }
brotli = "7.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] }
hex = "0.4.3"
strum = { version = "0.26.3", features = ["derive"] }
clap = { version = "4.5.23",  features = ["derive", "env"] }
jsonschema = "0.28.3"
jsonpath-rust = "0.7.5"
futures = "0.3.31"
ed25519-bip32 = "0.4.1" # used by the `mk_signed_doc` cli tool
tracing = "0.1.40"
thiserror = "2.0.11"

[dev-dependencies]
base64-url = "3.0.0"
rand = "0.8.5"
uuid = { version = "1.12.0", features = ["v7"] }
tokio = { version = "1.42.0", features = [ "macros" ] }

[[bin]]
name = "mk_signed_doc"
path = "bins/mk_signed_doc.rs"
