[package]
name = "catalyst-signed-doc"
version = "0.0.10"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalyst-types = { version = "0.0.12", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.12" }
cbork-utils = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cbork-utils/v0.0.3" }

# When updating the specification version, it should also be updated for the `catalyst-signed-doc-macro` crate.
catalyst-signed-doc-macro = { version = "0.0.1", path = "../catalyst-signed-doc-macro" }
catalyst-signed-doc-spec = { version = "0.2.2", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-signed-doc-spec/v0.2.2-wasm" }

anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["raw_value"] }
minicbor = { version = "0.25.1", features = ["half"] }
brotli = "7.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] }
hex = "0.4.3"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = { version = "0.27.1" }
clap = { version = "4.5.23", features = ["derive", "env"] }
jsonpath-rust = "0.7.5"
futures = "0.3.31"
ed25519-bip32 = "0.4.1" # used by the `mk_signed_doc` cli tool
tracing = "0.1.40"
thiserror = "2.0.11"
chrono = "0.4.42"
itertools = "0.14.0"

# CID v1 support
cid = "0.11.1"
multihash = { version = "0.19.3", features = ["serde-codec"] }
sha2 = "0.10"
multibase = "0.9.2"
async-trait = "0.1.89"
dashmap = "6.1.0"

# tests_utils dependencies
rand = "0.8.5"

[dev-dependencies]
base64-url = "3.0.0"
uuid = { version = "1.12.0", features = ["v7"] }
tokio = { version = "1.42.0", features = ["macros"] }
test-case = "3.3.1"

[[bin]]
name = "mk_signed_doc"
path = "bins/mk_signed_doc.rs"
