[package]
name = "catalyst-signed-doc"
version = "0.0.10"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalyst-types = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "feat/cat-id-errors" }
cbork-utils = { version = "0.0.2", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cbork-utils-v0.0.2" }

catalyst-signed-doc-macro = { version = "0.0.1", path = "../catalyst-signed-doc-macro" }
catalyst-signed-doc-spec = { version = "0.1.3", path = "../catalyst-signed-doc-spec" }

anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["raw_value"] }
minicbor = { version = "0.25.1", features = ["half"] }
brotli = "7.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] }
hex = "0.4.3"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = { version = "0.27.1" }
clap = { version = "4.5.23",  features = ["derive", "env"] }
jsonschema = "0.28.3"
jsonpath-rust = "0.7.5"
futures = "0.3.31"
ed25519-bip32 = "0.4.1" # used by the `mk_signed_doc` cli tool
tracing = "0.1.40"
thiserror = "2.0.11"
chrono = "0.4.42"

[dev-dependencies]
base64-url = "3.0.0"
rand = "0.8.5"
uuid = { version = "1.12.0", features = ["v7"] }
tokio = { version = "1.42.0", features = [ "macros" ] }
test-case = "3.3.1"

[[bin]]
name = "mk_signed_doc"
path = "bins/mk_signed_doc.rs"
