[package]
name = "vote-tx-v2"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.89"
ciborium = { version = "0.2.2", default-features = false }
cddl = { version = "0.9.4" }
proptest = { version = "1.5.0" }

[dev-dependencies]
# Potentially it could be replaced with using `proptest::property_test` attribute macro,
# after this PR will be merged https://github.com/proptest-rs/proptest/pull/523
test-strategy = "0.4.0"