[project]
name = "gen-docs"
version = "0.1.0"
description = "Generate Signed Document documentation files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pydot>=3.0.4",
    "rich>=14.0.0",
    "rich-argparse>=1.7.0",
]

[tool.ruff.lint.isort]
known-third-party = [
    "pydantic", 
    "pydot", 
    "rich", 
    "rich-argparse"
]

known-first-party = [
    "spec", 
]
