[project]
name = "generators"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jsonschema[format]>=4.24.0",
    "pydantic>=2.11.6",
    "pydot>=4.0.0",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "spec",
]

[project.scripts]
validator = "validator.main:main"

[tool.uv.workspace]
members = [
    "packages/spec",
]

[tool.uv.sources]
spec = { workspace = true }

[tool.ruff]
# Extend the project wide `ruff.toml` file.
# Done so we can add known libraries to sorting.
extend = "ruff.toml"

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "pydot", "rich", "rich-argparse"]

known-first-party = ["spec"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validator", "packages/spec"]