[project]
name = "generators"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "css-inline>=0.15.0",
    "great-tables>=0.17.0",
    "jinja2>=3.1.6",
    "jsonschema[format]>=4.24.0",
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.3.0",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydot>=4.0.1",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "spec",
]

[project.scripts]
validator = "validator.main:main"
docs = "docs.main:main"

[tool.uv.workspace]
members = [
    "packages/spec",
]

[tool.uv.sources]
spec = { workspace = true }

[tool.ruff]
# Extend the project wide `ruff.toml` file.
# Done so we can add known libraries to sorting.
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
#known-third-party = ["pydantic", "pydot", "rich", "rich-argparse"]
known-first-party = ["spec"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validator", "packages/spec"]
