[project]
name = "generators"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "css-inline>=0.18.0",
    "great-tables>=0.20.0",
    "jinja2>=3.1.6",
    "jsonschema[format]>=4.25.1",
    "mdformat>=1.0.0",
    "mdformat-mkdocs>=4.4.2",
    "polars>=1.35.1",
    "pydantic>=2.12.3",
    "pydot>=4.0.1",
    "rich>=14.2.0",
    "rich-argparse>=1.7.2",
    "pyYAML>=6.0.3",
    "cbor2>=5.7.1",
    "spec",
]

[project.scripts]
validator = "validator.main:main"
docs = "docs.main:main"

[tool.uv.workspace]
members = [
    "packages/spec",
]

[tool.uv.sources]
spec = { workspace = true }

[tool.ruff]
# Extend the project wide `ruff.toml` file.
# Done so we can add known libraries to sorting.
extend = "../../ruff.toml"

[tool.ruff.lint.isort]
#known-third-party = ["pydantic", "pydot", "rich", "rich-argparse"]
known-first-party = ["spec"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validator", "packages/spec"]
