[package]
name = "overhead_benchmark"
version = "0.1.1"
edition.workspace = true

[lints]
workspace = true

[dependencies]
cardano-chain-follower = { path = "../.." }

anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive", "help", "usage", "std"], default-features = false }
pallas-traverse = "0.30.2"
pallas-hardano = "0.30.2"
tokio = { version = "1.40.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
